force-app/main/default/objects/Feature_Sets__c/Feature_Sets__c.object-meta.xml
<CustomObject>
    <description>Created by: YB</description>
    <label>Feature Sets</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Feature Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>