force-app/main/default/objects/Feature_Sets__c/fields/Catalog_Feature_Set__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Feature_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: YB</description>
    <label>Catalog Feature Set</label>
    <referenceTo>Catalog_Feature_Set__c</referenceTo>
    <relationshipLabel>Feature Sets</relationshipLabel>
    <relationshipName>Feature_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>