force-app/main/default/objects/Feature_Sets__c/fields/Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Hrs__c</fullName>
    <label>Estimate (Hrs)</label>
    <summarizedField>Features__c.Estimate__c</summarizedField>
    <summaryForeignKey>Features__c.Feature_Sets__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>