force-app/main/default/objects/Feature_Sets__c/fields/Features_Code__c.field-meta.xml
<CustomField>
    <fullName>Features_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Features Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>