force-app/main/default/objects/Feature_Sets__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created by: YB</description>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>BWTC</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Feature Sets</relationshipLabel>
    <relationshipName>Feature_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>