force-app/main/default/objects/Feature_Sets__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Created by: YB</description>
    <label>Scope</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Feature Sets</relationshipLabel>
    <relationshipName>Feature_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>