force-app/main/default/objects/Feature_Sets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Feature Sets - All</label>
</ListView>